# Admin_panel_sprint_2

./: .dockerignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: movies_admin_build_push.yml
config/: .env.template
docker/django/: Dockerfile  gunicorn.sh
docker/nginx/: nginx.conf
docker/nginx/conf.d/: site.conf
docker/pg/: init.sql
files/: django_openapi.yml  postman_tests.json
server/: asgi.py  urls.py  wsgi.py
server/apps/movies/: admin.py  models.py
server/apps/movies/api/: urls.py
server/apps/movies/api/v1/: urls.py  views.py
server/apps/movies/migrations/: 0001_initial.py
server/apps/movies/utils/: types.py  validators.py
server/apps/movies/utils/mixins/: api.py  models.py
server/settings/: __init__.py
server/settings/components/: common.py  logging.py
server/settings/environments/: development.py  production.py
tasks/: 01_django.md  02_docker.md  03_nginx.md
