[tool.poetry]
name = "admin_panel_sprint_2"
version = "0.1.0"
description = ""
authors = ["Maksim Zayakin <rasetsu@list.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
django-split-settings = "^1.1.0"
django-stubs-ext = "^0.3.1"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"
python-decouple = "^3.5"
django-health-check = "^3.16.4"
structlog = "^21.2.0"

[tool.poetry.dev-dependencies]
django-stubs = "^1.9.0"
django-debug-toolbar = "^3.2.2"
flake8 = "^4.0.1"
nplusone = "^1.0.0"
black = "^21.10b0"
isort = "^5.10.0"
pre-commit = "^2.15.0"
django-querycount = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
strict_equality = true
implicit_reexport = false
show_error_context = true
pretty = true
show_traceback = true
scripts_are_modules = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true


[tool.django-stubs]
django_settings_module = "server.settings"

